--- a/roles/bigbluebutton/tasks/main.yml
+++ b/roles/bigbluebutton/tasks/main.yml
@@ -12,7 +12,6 @@
   with_items:
     - ppa:bigbluebutton/support
     - ppa:rmescandon/yq
-    - ppa:certbot/certbot
     - deb [ arch=amd64,arm64 ] http://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.4 multiverse
     - deb https://deb.nodesource.com/node_8.x xenial main
     - deb https://ubuntu.bigbluebutton.org/xenial-220/ bigbluebutton-xenial main
@@ -39,8 +38,6 @@
       - openjdk-8-jdk
       - nodejs
       - bigbluebutton
-      - certbot
-      - python-certbot-nginx
   notify: restart bbb
 
 - name: install bbb-html5
@@ -66,16 +63,25 @@
   command: bbb-conf --setip {{ ansible_host }}
   notify: restart bbb
 
-- name: create certificate
-  command: certbot certonly --domain {{ ansible_host }} --nginx --agree-tos -m {{ email }}
-  args:
-    creates: /etc/letsencrypt/live/{{ ansible_host }}/cert.pem
-  notify: restart bbb
-
-- name: nginx ssl directory
+- name: create nginx ssl directory
   file:
     state: directory
     dest: /etc/nginx/ssl/
+
+- name: install tls certificate (if none exists)
+  copy:
+    src: '{{ item.source }}'
+    dest: /etc/nginx/ssl/{{ item.target }}
+    owner: root
+    group: root
+    mode: '0400'
+    force: false
+  notify: reload nginx
+  loop:
+    - {source: certificate.pem,
+       target: '{{ inventory_hostname }}.crt'}
+    - {source: key.pem,
+       target: '{{ inventory_hostname }}.key'}
 
 - name: diffie hellmann parameter from https://ssl-config.mozilla.org/ffdhe2048.txt
   copy:
@@ -89,7 +95,7 @@
     state: absent
   notify: reload nginx
 
-- name: configure NGINX for bbb
+- name: configure nginx for bigbluebutton
   blockinfile:
     path: /etc/nginx/sites-available/bigbluebutton
     insertbefore: 'server_name'
@@ -106,11 +112,11 @@
         listen 443 ssl;
         listen [::]:443 ssl;
 
-        ssl_certificate /etc/letsencrypt/live/{{ ansible_host }}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/{{ ansible_host }}/privkey.pem;
+        ssl_certificate /etc/nginx/ssl/{{ ansible_host }}.crt;
+        ssl_certificate_key /etc/nginx/ssl/{{ ansible_host }}.key;
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+        ssl_protocols TLSv1.1 TLSv1.2;
         ssl_ciphers "ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS:!AES256";
         ssl_prefer_server_ciphers on;
         ssl_dhparam /etc/nginx/ssl/dhparam.pem;
