Use low quality camera by default
This patch configures the low quality webcam setting as default,
reducing the bandwidth users need for a video call. In cases where they
need better quality, they are still able to choose that. Likely,
however, the default will be the setting used most often.

This fixes #5

--- a/roles/bigbluebutton/tasks/main.yml
+++ b/roles/bigbluebutton/tasks/main.yml
@@ -167,6 +167,20 @@
   command: bbb-conf --setsecret {{ bbb_secret }}
   notify: restart bbb
 
+- name: configure default camere quality
+  replace:
+    path: /usr/share/meteor/bundle/programs/server/assets/app/config/settings.yml
+    after: '- id: *{{ item.id }}'
+    before: '-'
+    regexp: 'default: *.*$'
+    replace: 'default: {{ item.default }}'
+  loop:
+    - {id: low, default: 'true'}
+    - {id: medium, default: 'false'}
+    - {id: high, default: 'false'}
+    - {id: hd, default: 'false'}
+  notify: restart bbb
+
 - name: ufw allow known services
   ufw:
     rule: allow
