Disable Recording Button
This patch disables the recording button, stopping users from cluttering
the servers with conference recordings and taking away important
resources from the system.

This is part of a fix for #2.

--- a/roles/bigbluebutton/tasks/main.yml
+++ b/roles/bigbluebutton/tasks/main.yml
@@ -181,6 +181,13 @@
     - {id: hd, default: 'false'}
   notify: restart bbb
 
+- name: disable recording button
+  lineinfile:
+    path: /usr/share/bbb-web/WEB-INF/classes/bigbluebutton.properties
+    regexp: '^allowStartStopRecording='
+    line: 'allowStartStopRecording=false'
+  notify: restart bbb
+
 - name: ufw allow known services
   ufw:
     rule: allow
