--- a/roles/bigbluebutton/tasks/main.yml
+++ b/roles/bigbluebutton/tasks/main.yml
@@ -65,7 +65,7 @@
   notify: restart bbb
 
 - name: set hostname in bbb
-  command: bbb-conf --setip {{ ansible_host }}
+  command: bbb-conf --setip {{ inventory_hostname }}
   notify: restart bbb
 
 - name: create nginx ssl directory
@@ -109,7 +109,7 @@
     block: |
         server_name _;
         location / {
-        return 301 https://{{ ansible_host }}$request_uri;
+        return 301 https://{{ inventory_hostname }}$request_uri;
         }
         }
 
@@ -117,8 +117,8 @@
         listen 443 ssl;
         listen [::]:443 ssl;
 
-        ssl_certificate /etc/nginx/ssl/{{ ansible_host }}.crt;
-        ssl_certificate_key /etc/nginx/ssl/{{ ansible_host }}.key;
+        ssl_certificate /etc/nginx/ssl/{{ inventory_hostname }}.crt;
+        ssl_certificate_key /etc/nginx/ssl/{{ inventory_hostname }}.key;
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
         ssl_protocols TLSv1.1 TLSv1.2;
