Update to Greenlight 2.6.5
- Update Greenlight
- Install database backup

--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -10,4 +10,7 @@
 #    greenlight: ...
 secrets: '{{ vault_secrets }}'
 
-email: lars@kiesow.io
+container:
+  greenlight:
+    image: docker.io/bigbluebutton/greenlight
+    tag: release-2.6.5
