--- a/roles/greenlight/templates/greenlight.env
+++ b/roles/greenlight/templates/greenlight.env
@@ -16,6 +16,13 @@ SECRET_KEY_BASE={{ secrets[inventory_hostname].greenlight }}
 BIGBLUEBUTTON_ENDPOINT=https://{{ inventory_hostname }}
 BIGBLUEBUTTON_SECRET={{ secrets[inventory_hostname].bigbluebutton }}
 
+# The hostname that the application is accessible from.
+#
+# Used to protect against various HTTP header attacks
+# Should be in the form of "domain.com"
+#
+SAFE_HOSTS=
+
 # Google Login Provider (optional)
 #
 # For in-depth steps on setting up a Google Login Provider, see:
@@ -61,17 +68,23 @@ OAUTH2_REDIRECT=
 #   LDAP_METHOD=plain
 #   LDAP_UID=uid
 #   LDAP_BASE=dc=example,dc=com
+#   LDAP_AUTH=simple
 #   LDAP_BIND_DN=cn=admin,dc=example,dc=com
 #   LDAP_PASSWORD=password
 #   LDAP_ROLE_FIELD=ou
+#   LDAP_FILTER=(&(attr1=value1)(attr2=value2))
+#   LDAP_ATTRIBUTE_MAPPING=name=displayName;uid=uid; (See link above for more details)
 LDAP_SERVER=
 LDAP_PORT=
 LDAP_METHOD=
 LDAP_UID=
 LDAP_BASE=
 LDAP_BIND_DN=
+LDAP_AUTH=
 LDAP_PASSWORD=
 LDAP_ROLE_FIELD=
+LDAP_FILTER=
+LDAP_ATTRIBUTE_MAPPING=
 
 # Set this to true if you want GreenLight to support user signup and login without
 # Omniauth. For more information, see:
@@ -89,7 +102,7 @@ RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
 
 # To enable Google Analytics on your site, set this key to the Google Analytics Property Tracking ID
-# 
+#
 #  https://analytics.google.com/analytics/web/
 #
 GOOGLE_ANALYTICS_TRACKING_ID=
@@ -109,6 +122,10 @@ GOOGLE_ANALYTICS_TRACKING_ID=
 #   SMTP_PASSWORD=<yourpassword>
 #   SMTP_AUTH=plain
 #   SMTP_STARTTLS_AUTO=true
+#
+# If your mail server has a self-signed certificate, you'll also need to include the line below. 
+# Please note that enable this presents its own security risks and should not be done unless necessary.
+#   SMTP_OPENSSL_VERIFY_MODE=none
 #
 SMTP_SERVER=
 SMTP_PORT=
@@ -170,7 +187,14 @@ MAINTENANCE_WINDOW=
 #
 # Defaults to the Github Issues Page for Greenlight
 # Button can be disabled by setting the value to blank
-REPORT_ISSUE_URL=https://github.com/bigbluebutton/greenlight/issues/new
+#
+# REPORT_ISSUE_URL=https://github.com/bigbluebutton/greenlight/issues/new
+
+# The link to the Need help? button that appears on the Account Dropdown
+#
+# Defaults to the Greenlight documentation
+# Button can be disabled by setting the value to blank
+HELP_URL=https://docs.bigbluebutton.org/greenlight/gl-overview.html
 
 # Comment this out to send logs to STDOUT in production instead of log/production.log .
 #
@@ -213,6 +237,7 @@ REPORT_ISSUE_URL=https://github.com/bigbluebutton/greenlight/issues/new
 #
 # DB_ADAPTER=postgresql
 # DB_HOST=postgres.example.com
+# DB_PORT=5432
 # DB_NAME=greenlight_production
 # DB_USERNAME=postgres
 # DB_PASSWORD=password
@@ -221,6 +246,7 @@ REPORT_ISSUE_URL=https://github.com/bigbluebutton/greenlight/issues/new
 #
 DB_ADAPTER=postgresql
 DB_HOST=db
+DB_PORT=5432
 DB_NAME=greenlight_production
 DB_USERNAME=postgres
 DB_PASSWORD=password
@@ -231,4 +257,4 @@ DB_PASSWORD=password
 #   open - For open registration
 #   invite - For invite only registration
 #   approval - For approve/decline registration
-DEFAULT_REGISTRATION={{ default_registration }}
+DEFAULT_REGISTRATION=approval
