--- a/roles/greenlight/handlers/main.yml
+++ b/roles/greenlight/handlers/main.yml
@@ -4,3 +4,8 @@
   service:
     name: nginx
     state: reloaded
+
+- name: restart greenlight
+  shell: docker-compose down && docker-compose up -d
+  args:
+    chdir: /opt/greenlight
