--- a/roles/bigbluebutton/handlers/main.yml
+++ b/roles/bigbluebutton/handlers/main.yml
@@ -7,3 +7,20 @@
   service:
     name: nginx
     state: reloaded
+
+- name: restart freeswitch
+  service:
+    name: freeswitch
+    state: restarted
+
+- name: restart kurento
+  systemd:
+    name: kurento-media-server
+    state: restarted
+    daemon_reload: yes
+
+- name: restart redis
+  systemd:
+    name: redis-server
+    state: restarted
+    daemon_reload: yes
