Mark tests as allowed to fail

--- a/roles/greenlight/tasks/main.yml
+++ b/roles/greenlight/tasks/main.yml
@@ -49,7 +49,7 @@
         }
   notify: reload nginx
 
-- name: check greenlight status
+- name: check greenlight status (allowed to fail)
   shell: >
     docker inspect greenlight-v2 | grep -q '"Status": *"running"'
   register: greenlight_is_running
