--- a/roles/bigbluebutton/tasks/main.yml
+++ b/roles/bigbluebutton/tasks/main.yml
@@ -75,11 +75,11 @@
       line: ' <!--\1-->'
   notify: restart bbb
 
-- name: check hostname
+- name: check hostname (allowed to fail)
   command: grep -q '^screenshareRtmpServer={{ inventory_hostname }}$' /usr/share/bbb-web/WEB-INF/classes/bigbluebutton.properties
   register: hostname_is_set
   ignore_errors: true
-  changed_when: False
+  changed_when: false
 
 - name: set hostname in bbb
   command: bbb-conf --setip {{ inventory_hostname }}
@@ -210,7 +210,7 @@
       replace: 'playback_protocol: https'
   notify: restart bbb
 
-- name: check secret
+- name: check secret (allowed to fail)
   command: grep -q '^securitySalt={{ secrets[inventory_hostname].bigbluebutton }}$' /usr/share/bbb-web/WEB-INF/classes/bigbluebutton.properties
   register: secret_is_set
   ignore_errors: true
