Update to Greenlight 2.7

--- a/roles/greenlight/tasks/main.yml
+++ b/roles/greenlight/tasks/main.yml
@@ -17,7 +17,7 @@
       - containerd.io
       - docker-compose
 
-- name: make base repository present
+- name: create base directory
   file:
     state: directory
     path: /opt/greenlight
